--- a/Sign In/style.css
+++ b/Sign In/style.css
@@ -174,6 +174,20 @@ color: white;
     padding-bottom: 10px;
     border-bottom: 1px solid #e0e0e0;
 }
+.secondary-cta {
+    width: 23%;
+    height: 10%;
+    padding: 15px;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border: none;
+    margin-top: 10px;
+    align-items: center;
+}
 
 .modal-title-custom {
     font-size: 1.5rem;
@@ -267,7 +281,7 @@ color: white;
     }
 }
 .secondary-cta {
-    width: 15%;
+    width: 23%;
     height: 10%;
     padding: 15px;
     text-decoration: none;
@@ -278,6 +292,7 @@ color: white;
     cursor: pointer;
     border: none;
     margin-top: 10px;
+    align-items: center;
 }
 
 @media (max-width: 480px) {
