--- a/Projekt Dashboard/dashboard.css
+++ b/Projekt Dashboard/dashboard.css
@@ -37,12 +37,14 @@ h1, h2, h3 {
     align-items: center;
     gap: 30px;
 }
-
+.sidebar a {
+text-decoration: none;
+}
 .sidebar .logo {
     font-size: 1.5rem;
     color: var(--color-accent-green);
     margin-bottom: 20px;
-    display: none; /* Hide text logo on narrow bar */
+    display: none; 
 }
 
 .sidebar nav {
@@ -355,6 +357,7 @@ h1, h2, h3 {
         flex-direction: row;
         justify-content: space-around;
         padding: 15px 0;
+        margin-left: 10vw;
         z-index: 10;
         box-shadow: 0 5px 10px rgba(0,0,0,0.3);
     }
