--- a/Sign Up/style.css
+++ b/Sign Up/style.css
@@ -53,7 +53,9 @@ body {
     display: flex;
     align-items: center;
 }
-
+#z{
+display: none;
+}
 .remember-me input[type="checkbox"] {
     width: 16px;
     height: 16px;
